--- a/style.css
+++ b/style.css
@@ -7,16 +7,21 @@ h1{
 .tomato-color{
     color: tomato;
 }
+section{
+    display: flex;
+    margin-bottom: 150px;
+}
 .felxible-container{
     display: flex;
     margin-bottom: 80px;
 }
 .half-width{
     width: 50%;
-    padding-left: 10%;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 .half-width img{
-    width: 70%;
+    width: 80%;
 }
 .link-button{
     text-decoration: none;
@@ -31,4 +36,7 @@ h1{
     background-image: linear-gradient(rgb(123, 123, 238), rgb(230, 119, 100));
     background-color: tomato;
     text-align: center;
+}
+.white-color{
+    color: white;
 }
